--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,16 +4,12 @@ server:
 spring:
   application:
     name: HYSTRIX-DASHBOARD
+  cloud:
+    config:
+      import-check:
+        enabled: false
 
 hystrix:
   dashboard:
     proxy-stream-allow-list: "*"
 
-eureka:
-  client:
-    register-with-eureka: true
-    fetch-registry: true
-    service-url:
-      default-zone: http://localhost:8761/eureka/
-  instance:
-    hostname: localhost
